# NeSy-CML

./: CHESS_README.md  NeSy-CML Proprietary License  README.md  analyze_book_pages.py  analyze_metaphor_issue.py  check_compilation_book.py  check_poetry_performance.py  chess_improved_results.json  comprehensive_chess_test.py  comprehensive_pdf_processor.py  create_safe_image_dataset.py  custom_architecture_selector.py  data_module.py  dataset_wrapper.py  debug_poetry_shapes.py  debug_tactics_books.py  evaluate_poetry_model.py  evaluator.py  filtered_occlusion_test.py  fix_dataset_extraction.py  fix_f1_scores.py  full_dataset_extraction.py  identify_real_f1_problems.py  improve_chess_accuracy.py  meta_model.py  model_builder.py  model_distribution_guide.md  modular_architecture.py  modular_replay_buffer.py  modular_symbolic_controller.py  poetry_recommendation_system.py  pyproject.toml  replay_buffer.py  requirements-github.txt  requirements.txt  secure_image_dataset.py  setup.py  setup_safe_multimodal_dataset.py  symbolic_controller.py  targeted_scraper.py  (+17 more)
dataset/Chess_data/: README.md
logs/: chess_4gb_results.json
tests/: README.md  test_chess_labeling.py  test_draw_stalemate_labeling.py  test_eval_fix.py  test_model_creation.py  test_model_no_clip.py  test_model_validation.py  test_multimodal_setup.py  test_pdf_processing.py  test_real_accuracy.py  test_trained_model.py
